refactor(agentic-ai): refactor agentic AI connector codebase to use new abstractions for messages, tool calling, and memory
Decouples langchain4j usage to a framework interface which can
potentially be implemented by another framework.

This allows us to adapt our process variable handling to our needs while
still being able to use framework core functionality for the LLM
communication.